--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-merlot
 title: Reece Yankey
-description: A collection of my repositories
+description: This is a collection of my repositories
