--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-tactile
 title: Reece Yankey
 description: This is a collection of my repositories
