--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Reece Yankey
-description: This is a collection of my repositories
+description: I am currently studying computer science at Virginia Tech. Computer science has always interested me from a young age and I’m diving dive head-first into the field. I love putting together projects and finding the best ways to structure them for optimization, readability, or expandability. Not to mention machine learning with the potential to revolutionize the future. It’s all so interesting and there’s so much to learn. I aspire to become a programmer with all of the tools he needs to tackle any type of problem.
