--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Reece Yankey
-description: Examples of my code
+description: This page is a compilation of various projects I have made
